Add ignores (based on .bzrignore)

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,51 @@
+# ignore for GM
+# General ignores
+
 *.lock
 *~
 *.obj
 *.tlog
 *.pdb
 *.idb
+*.ipch
+*.pch
+*.ilk
 *.manifest
 *.ncb
 *.opt
 *.sdf
+*.suo
+*.plg
 *.old
 *.user
 *.log
+*.lastbuildstate
+*.unsuccessfulbuild
+*.dep
+*.vssscc
+*.vspscc
+*.SCC
+Debug/
+debug/
+Release/
+release/
+_UpgradeReport_Files/
+UpgradeLog*.XML
+log.txt
+
+# GM specific ignores
+
+*/bin/gmd.debug.exe
+*/bin/gmd.exe
+*/bin/gme.debug.exe
+*/bin/gme.exe
+*/bin/gme64.Debug.exe
+*/bin/gme64.exe
+*/bin/gml.debug.exe
+*/bin/gml.exe
+*/bin/gml.exe
+*/*/gm/gmParser.cpp
+*/*/gm/gmParser.cpp.h
+*/*/gm/gmScanner.cpp
+gmdoc.html
+gmdoc.xml
